# crucible

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  run_all.py  train.py
data/: get_data.py  xauusd_h1.csv
kdrl/: __init__.py  agents.py  env.py  evaluate.py  experiment.py  features.py  kalman.py  metrics.py
results/: comparison.csv  comparison.md  results.csv
tests/: test_kalman_causal.py  test_pipeline.py
